-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.2.1, 6.2.2, 6.3
-
None
Emit bursts doesn't work with emitter animations. Adding many bursts at
different times emit all particles in the same direction even when the
emitter points to different directions when the burst happens.
This happens because the emit bursts are generated at the beginning, which locks their properties to that time. The bursts shoud be changed so that they emit particles when the burst occurs.
For Gerrit Dashboard: QTBUG-98111 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
380493,8 | Change emit bursts to emit when burst occurs | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
383067,2 | Change emit bursts to emit when burst occurs | 6.2 | qt/qtquick3d | Status: MERGED | +2 | 0 |