Change emit bursts to emit when burst occurs

Currently the bursts do not work with animated emitters, because the
bursts are generated at the start, which locks their properties to that
time. Change the bursts to emit at the time the burst occurs.

Task-number: QTBUG-98111
Change-Id: Idbbfe3a77506d08987a2fa4e5c13e2a8d5a4e0b8
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
(cherry picked from commit 417a13e85244277e7d99c32ad57be193bd26a1f4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>