src/quick3dparticles/qquick3dparticleemitter_p.h
@@ -149,12 +149,12 @@ protected:
     void componentComplete() override;
     void registerEmitBurst(QQuick3DParticleEmitBurst *emitBurst);
     void unRegisterEmitBurst(QQuick3DParticleEmitBurst *emitBurst);
-    void generateEmitBursts();
     void emitParticle(QQuick3DParticle *particle, float startTime, const QMatrix4x4 &transform, const QQuaternion &parentRotation, const QVector3D &centerPos, int index = -1);
     void emitParticles();
     void emitActivationNodeParticles(QQuick3DParticleModelBlendParticle *particle);
     void emitParticlesBurst(const QQuick3DParticleEmitBurstData &burst);
     int getEmitAmount();
+    int getEmitAmountFromBursts();
 
     void reset();
 
@@ -196,7 +196,6 @@ private:
     QVector3D m_particleRotationVelocityVariation;
     bool m_enabled = true;
     const QQuick3DParticleData m_clearData = {};
-    bool m_burstGenerated = false;
     QQuick3DNode *m_systemSharedParent = nullptr;
     QList<QQuick3DParticleEmitBurst *> m_emitBursts;
 };
